--- a/index.html
+++ b/index.html
@@ -1,16 +1,158 @@
 <!DOCTYPE html>
-<html>
+<html lang="rs">
 
 <head>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+    </style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Naslov taba</title>
-    <meta name="description" content="Veb sajt rađen samo u HTML-u za prvi zadatak iz predmeta SP2-WD">
+    <title>5 najboljih video igara do 2020. godine</title>
+    <meta name="description" content="Veb sajt rađen u HTML-u za prvi zadatak iz predmeta SP2-WD">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
-    <a href="Contact.html">Povratne informacije</a>
+<body style="background-color: rgb(255, 255, 255);">
+    <h2 id="vrh"></h2>
+    <div class="header">
+        <h1 style="font-family: 'Roboto', sans-serif; text-align:center"><strong>TOP 5 najboljih video igara do 2020.
+                godine</strong></h1>
+        <p style="font-family: 'Roboto', sans-serif; text-align:center">&copy; <b><u>Luka Momčilović</u></b> 2021. -
+            <i>sva prava zadržana</i></p>
+        <hr>
+    </div>
+    <div class="navbar">
+        <h3 style="font-family: 'Roboto', sans-serif; text-align:center">
+            <a href="index.html">POČETNA</a>
+            |
+            <a href="Igre.html">IGRE</a>
+            |
+            <a href="About.html">O STRANICI</a>
+            |
+            <a href="Contact.html">KONTAKTIRANJE</a>
+            <hr>
+        </h3>
+    </div>
+
+    <div>
+        <h4>Tabela:</h4>
+        <table border="1" style="margin-left: auto; margin-right:auto">
+            <tr>
+                <th colspan="2" rowspan="2"><em><mark> Tabela popularnosti igara</mark></em></th>
+                <th colspan="4">Procenat aktivnih igrača (2020. godina):</th>
+            </tr>
+            <tr>
+                <th>Q1</th>
+                <th>Q2</th>
+                <th>Q3</th>
+                <th>Q4</th>
+            </tr>
+            <tr>
+                <th rowspan="5">Naziv igre:</th>
+                <th>&lt;Brawlhalla&gt;</th>
+                <td>24%</td>
+                <td>20%</td>
+                <td>23%</td>
+                <td>26%</td>
+            </tr>
+            <tr>
+                <th>&lt;Call Of Duty: Warzone&gt;</th>
+                <td>15%</td>
+                <td>17%</td>
+                <td>23%</td>
+                <td>21%</td>
+            </tr>
+            <tr>
+                <th>&lt;Grand Theft Auto 5&gt;</th>
+                <td>29%</td>
+                <td>35%</td>
+                <td>31%</td>
+                <td>32%</td>
+            </tr>
+            <tr>
+                <th>&lt;League Of Legends&gt;</th>
+                <td>60%</td>
+                <td>55%</td>
+                <td>57%</td>
+                <td>59%</td>
+            </tr>
+            <tr>
+                <th>&lt;Halo 3&gt;</th>
+                <td>72%</td>
+                <td>73%</td>
+                <td>73%</td>
+                <td>74%</td>
+            </tr>
+        </table>
+    </div>
+    <hr>
+
+    <h4>Lista:</h4>
+    <ul>
+        <li>
+            Q1
+            <ol type="1">
+                <li>Halo 3</li>
+                <li>League Of Legends</li>
+                <li>Grand Theft Auto 5</li>
+                <li>Brawlhalla</li>
+                <li>Call Of Duty: Warzone</li>
+            </ol>
+        </li>
+        <li>Q2
+            <ol type="1">
+                <li>Halo 3</li>
+                <li>League Of Legends</li>
+                <li>Grand Theft Auto 5</li>
+                <li>Brawlhalla</li>
+                <li>Call Of Duty: Warzone</li>
+            </ol>
+        </li>
+        <li>Q3
+            <ol type="1">
+                <li>Halo 3</li>
+                <li>League Of Legends</li>
+                <li>Grand Theft Auto 5</li>
+                <li>
+                    <ol type="a">
+                        <li>Call Of Duty: Warzone</li>
+                        <li>Brawlhalla</li>
+                    </ol>
+                </li>
+            </ol>
+        </li>
+        <li>Q4
+            <ol type="1">
+                <li>Halo 3</li>
+                <li>League Of Legends</li>
+                <li>Grand Theft Auto 5</li>
+                <li>Brawlhalla</li>
+                <li>Call Of Duty: Warzone</li>
+            </ol>
+        </li>
+    </ul>
+<hr>
+    <h4>
+        Sajtovi individualnih igara:
+        <a href="https://www.brawlhalla.com/" target="prvi_iframe">Brawlhalla</a>
+        |
+        <a href="https://www.callofduty.com/warzone" target="prvi_iframe">Call Of Duty: Warzone</a>
+        |
+        <a href="https://www.rockstargames.com/V/" target="prvi_iframe">Grand Theft Auto 5</a>
+        |
+        <a href="https://eune.leagueoflegends.com/" target="prvi_iframe">League Of Legends</a>
+        |
+        <a href="https://www.halowaypoint.com/en-us/games/halo-3" target="prvi_iframe">Halo 3</a>
+    </h4>
+    <hr>
+    <iframe src="https://www.brawlhalla.com/" width="100%" height="500px" name="prvi_iframe"></iframe>
+
+    <br>
+    <div style="background-color: blue; ">
+        <a href="#vrh"><img src="images/Arrow-Up-PNG-Free-Download.png" width="7%"
+                style="margin-left: 50%; margin-right: 50%"></a>
+    </div>
+
 </body>
 
 </html>
