--- a/About.html
+++ b/About.html
@@ -33,6 +33,6 @@
     </p>
 
     <p>
-        <a href="#vrh"><img src="images/Arrow-Up-PNG-Free-Download.png" width="7%"></a>
+        <a href="#vrh"><img src="images/UpArrow.png" width="7%"></a>
     </p>
 </body>
