--- a/Igre.html
+++ b/Igre.html
@@ -28,7 +28,7 @@
         </h3>
     </div>
     <h2>Igre</h2>
-    <div class="navbar" style="background-color: rgb(32, 28, 114);">
+    <div class="navbar">
         <h5 style="font-family: 'Roboto', sans-serif; text-align:center">
             <br>
             <a href="images/brawlhalla.jpg" target="_blank" style="color: rgb(255, 255, 255);"><img src="images/brawlhalla.jpg"
@@ -52,6 +52,9 @@
             <hr>
         </h5>
     </div>
+    <p>
+        <a href="#vrh"><img src="images/UpArrow.png" width="7%"></a>
+    </p>
 </body>
 
 </html>
