--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <br>
     <div style="background-color: blue; ">
-        <a href="#vrh"><img src="images/Arrow-Up-PNG-Free-Download.png" width="7%"
+        <a href="#vrh"><img src="images/UpArrow.png" width="7%"
                 style="margin-left: 50%; margin-right: 50%"></a>
     </div>
 
