--- a/Contact.html
+++ b/Contact.html
@@ -18,11 +18,11 @@
         <h3 style="font-family: 'Roboto', sans-serif; text-align:center">
             <a href="index.html">POČETNA</a>
             |
-            <a href="Igre.html">IGRE</a>
+            <a href="igre.html">IGRE</a>
             |
-            <a href="About.html">O STRANICI</a>
+            <a href="about.html">O STRANICI</a>
             |
-            <a href="Contact.html">KONTAKTIRANJE</a>
+            <a href="contact.html">KONTAKTIRANJE</a>
             <hr>
         </h3>
     </div>
