--- a/Igre.html
+++ b/Igre.html
@@ -19,11 +19,11 @@
             <br>
             <a href="index.html" style="color: rgb(255, 255, 255);">POČETNA</a>
             |
-            <a href="Igre.html" style="color: rgb(255, 255, 255);">IGRE</a>
+            <a href="igre.html" style="color: rgb(255, 255, 255);">IGRE</a>
             |
-            <a href="About.html" style="color: rgb(255, 255, 255);">O STRANICI</a>
+            <a href="about.html" style="color: rgb(255, 255, 255);">O STRANICI</a>
             |
-            <a href="Contact.html" style="color: rgb(255, 255, 255);">KONTAKTIRANJE</a>
+            <a href="contact.html" style="color: rgb(255, 255, 255);">KONTAKTIRANJE</a>
             <hr>
         </h3>
     </div>
@@ -31,23 +31,23 @@
     <div class="navbar">
         <h5 style="font-family: 'Roboto', sans-serif; text-align:center">
             <br>
-            <a href="images/brawlhalla.jpg" target="_blank" style="color: rgb(255, 255, 255);"><img src="images/brawlhalla.jpg"
-                    alt="brawlhalla" width="300"></a>
+            <a href="Images/brawlhalla.jpg" target="_blank" style="color: rgb(255, 255, 255);"><img src="images/brawlhalla.jpg"
+                    alt="Brawlhalla" width="300"></a>
             <br>
             <hr>
-            <a href="images/CallOfDutyWarzone.jpg" target="_window" style="color: rgb(255, 255, 255);"><img src="images/CallOfDutyWarzone.jpg"
+            <a href="Images/CallOfDutyWarzone.jpg" target="_window" style="color: rgb(255, 255, 255);"><img src="images/CallOfDutyWarzone.jpg"
                     alt="Call Of Duty: Warzone" width="300"></a>
             <br>
             <hr>
-            <a href="images/GrandTheftAuto5.jpg" target="_blank" style="color: rgb(255, 255, 255);"><img src="images/GrandTheftAuto5.jpg"
+            <a href="Images/GrandTheftAuto5.jpg" target="_blank" style="color: rgb(255, 255, 255);"><img src="images/GrandTheftAuto5.jpg"
                     alt="Grand Theft Auto 5" width="300"></a>
             <br>
             <hr>
-            <a href="images/LeagueOfLegends.jpg" target="_blank" style="color: rgb(255, 255, 255);"><img src="images/LeagueOfLegends.jpg"
+            <a href="Images/LeagueOfLegends.jpg" target="_blank" style="color: rgb(255, 255, 255);"><img src="images/LeagueOfLegends.jpg"
                     alt="League Of Legends" width="300"></a>
             <br>
             <hr>
-            <a href="images/Halo3.jpg" target="_blank" style="color: rgb(255, 255, 255);"><img src="images/Halo3.jpg" alt="Halo 3
+            <a href="Images/Halo3.jpg" target="_blank" style="color: rgb(255, 255, 255);"><img src="images/Halo3.jpg" alt="Halo 3
             " width="300"></a>
             <hr>
         </h5>
