--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </ol>
         </li>
     </ul>
-<hr>
+    <hr>
     <h4>
         Sajtovi individualnih igara:
         <a href="https://www.brawlhalla.com/" target="prvi_iframe">Brawlhalla</a>
@@ -148,9 +148,8 @@
     <iframe src="https://www.brawlhalla.com/" width="100%" height="500px" name="prvi_iframe"></iframe>
 
     <br>
-    <div style="background-color: blue; ">
-        <a href="#vrh"><img src="images/UpArrow.png" width="7%"
-                style="margin-left: 50%; margin-right: 50%"></a>
+    <div>
+        <a href="#vrh"><img src="images/UpArrow.png" width="7%" style="margin-left: 50%; margin-right: 50%"></a>
     </div>
 
 </body>
