--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
         <input type="submit" value="Pošalji">
     </form>
     <p>
-        <a href="#vrh"><img src="images/UpArrow.png" width="7%"></a>
+        <a href="#vrh"><img src="Images/UpArrow.png" width="7%"></a>
     </p>
 </body>
 
