--- a/igre.html
+++ b/igre.html
@@ -32,29 +32,29 @@
         <h5 style="font-family: 'Roboto', sans-serif; text-align:center">
             <br>
             <a href="Images/brawlhalla.jpg" target="_blank" style="color: rgb(255, 255, 255);"><img
-                    src="images/brawlhalla.jpg" alt="Brawlhalla" width="300"></a>
+                    src="Images/brawlhalla.jpg" alt="Brawlhalla" width="300"></a>
             <br>
             <hr>
             <a href="Images/CallOfDutyWarzone.jpg" target="_window" style="color: rgb(255, 255, 255);"><img
-                    src="images/CallOfDutyWarzone.jpg" alt="Call Of Duty: Warzone" width="300"></a>
+                    src="Images/CallOfDutyWarzone.jpg" alt="Call Of Duty: Warzone" width="300"></a>
             <br>
             <hr>
             <a href="Images/GrandTheftAuto5.jpg" target="_blank" style="color: rgb(255, 255, 255);"><img
-                    src="images/GrandTheftAuto5.jpg" alt="Grand Theft Auto 5" width="300"></a>
+                    src="Images/GrandTheftAuto5.jpg" alt="Grand Theft Auto 5" width="300"></a>
             <br>
             <hr>
             <a href="Images/LeagueOfLegends.jpg" target="_blank" style="color: rgb(255, 255, 255);"><img
-                    src="images/LeagueOfLegends.jpg" alt="League Of Legends" width="300"></a>
+                    src="Images/LeagueOfLegends.jpg" alt="League Of Legends" width="300"></a>
             <br>
             <hr>
-            <a href="Images/Halo3.jpg" target="_blank" style="color: rgb(255, 255, 255);"><img src="images/Halo3.jpg"
+            <a href="Images/Halo3.jpg" target="_blank" style="color: rgb(255, 255, 255);"><img src="Images/Halo3.jpg"
                     alt="Halo 3
             " width="300"></a>
             <hr>
         </h5>
     </div>
     <p>
-        <a href="#vrh"><img src="images/UpArrow.png" width="7%"></a>
+        <a href="#vrh"><img src="Images/UpArrow.png" width="7%"></a>
     </p>
 </body>
 
