--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h3 style="font-family: 'Roboto', sans-serif; text-align:center">
             <a href="index.html">POČETNA</a>
             |
-            <a href="Igre.html">IGRE</a>
+            <a href="igre.html">IGRE</a>
             |
             <a href="About.html">O STRANICI</a>
             |
@@ -149,7 +149,7 @@
 
     <br>
     <div>
-        <a href="#vrh"><img src="images/UpArrow.png" width="7%" style="margin-left: 50%; margin-right: 50%"></a>
+        <a href="#vrh"><img src="Images/UpArrow.png" width="7%" style="margin-left: 50%; margin-right: 50%"></a>
     </div>
 
 </body>
