--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
 <body>
     <h2 id="vrh"></h2>
-    <div class="navbar">
+    <div class="navbar" style="background-color: rgb(32, 28, 114);">
         <h3 style="font-family: 'Roboto', sans-serif; text-align:center">
             <a href="index.html">POČETNA</a>
             |
