--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <i>sva prava zadržana</i></p>
         <hr>
     </div>
-    <div class="navbar">
+    <div class="navbar" style="background-color: rgb(32, 28, 114);">
         <h3 style="font-family: 'Roboto', sans-serif; text-align:center">
             <a href="index.html">POČETNA</a>
             |
