--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body style="background-color: rgb(255, 255, 255);">
+<body>
     <h2 id="vrh"></h2>
     <div class="header">
         <h1 style="font-family: 'Roboto', sans-serif; text-align:center"><strong>TOP 5 najboljih video igara do 2020.
@@ -21,15 +21,15 @@
             <i>sva prava zadržana</i></p>
         <hr>
     </div>
-    <div class="navbar" style="background-color: rgb(32, 28, 114);">
+    <div class="navbar">
         <h3 style="font-family: 'Roboto', sans-serif; text-align:center">
             <a href="index.html">POČETNA</a>
             |
             <a href="igre.html">IGRE</a>
             |
-            <a href="About.html">O STRANICI</a>
+            <a href="about.html">O STRANICI</a>
             |
-            <a href="Contact.html">KONTAKTIRANJE</a>
+            <a href="contact.html">KONTAKTIRANJE</a>
             <hr>
         </h3>
     </div>
