--- a/about.html
+++ b/about.html
@@ -9,13 +9,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>O STRANICI</title>
-    <meta name="description" content="Veb sajt rađen samo u HTML-u za prvi zadatak iz predmeta SP2-WD">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
     <h2 id="vrh"></h2>
-    <div class="navbar" style="background-color: rgb(32, 28, 114);">
+    <div class="navbar">
         <h3 style="font-family: 'Roboto', sans-serif; text-align:center">
             <a href="index.html">POČETNA</a>
             |
@@ -27,6 +26,7 @@
             <hr>
         </h3>
     </div>
+
     <h2>O Stranici</h2>
     <p>
         Ovo je stranica sa listom top 5 najboljih igrica do 2020. godine po mom mišljenju.
