--- a/muzikaIgara.html
+++ b/muzikaIgara.html
@@ -13,7 +13,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>O STRANICI</title>
+    <title>Muzika igara</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -34,10 +34,41 @@
         <hr>
     </h3>
 
-    <h2>O Stranici</h2>
+    <h2>
+        Muzika Igara
+    </h2>
+
+    <br>
+
     <p>
-        Ovo je stranica sa listom top 5 najboljih igrica do 2020. godine po mom mišljenju.
+        Neke od navedenih igara imaju jako lepe pesme koje se meni sviđaju. Jedna od takvih je pesma <i>Legends never
+            die</i> iz igrice <b>League of Legends</b>.
     </p>
+
+    <iframe src="https://open.spotify.com/embed/track/1FpVJ7HpZInE2GvhVE2TwT" width="300" height="380" frameborder="0"
+        allowtransparency="true" allow="encrypted-media">
+    </iframe>
+
+    <hr>
+    <br>
+
+    <p>
+        Još jedna pesma koja mi se sviđa je uvodna špica iz igrice <b> Halo</b>
+    </p>
+
+    <iframe src="https://open.spotify.com/embed/track/4xbrgqQF8bzy22K8JhtFM9" width="300" height="380" frameborder="0"
+        allowtransparency="true" allow="encrypted-media"></iframe>
+
+    <hr>
+    <br>
+
+
+    <p>
+        Igrica <b>Call Of Duty: Warzone</b> ima dobru plejlistu pesama
+    </p>
+
+    <iframe src="https://open.spotify.com/embed/playlist/7DT1ZBKF0jgt07CitdZp4W" width="300" height="380"
+        frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
     <hr>
 
