--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,12 @@
 <head>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+        * {
+            font-family: 'Roboto', sans-serif;
+        }
     </style>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>KONTAKTIRANJE</title>
@@ -14,19 +19,21 @@
 
 <body>
     <h2 id="vrh"></h2>
-    <div class="navbar">
-        <h3 style="font-family: 'Roboto', sans-serif; text-align:center">
-            <a href="index.html">POČETNA</a>
-            |
-            <a href="igre.html">IGRE</a>
-            |
-            <a href="about.html">O STRANICI</a>
-            |
-            <a href="contact.html">KONTAKTIRANJE</a>
-            <hr>
-        </h3>
-    </div>
-    
+
+    <h3 style="font-family: 'Roboto', sans-serif; text-align:center; background-color: rgb(0, 35, 102);">
+        <br>
+        <a href="index.html" style="color: rgb(255, 255, 255);">POČETNA</a>
+        |
+        <a href="igre.html" style="color: rgb(255, 255, 255);">IGRE</a>
+        |
+        <a href="muzikaIgara.html" style="color: rgb(255, 255, 255);">MUZIKA IGARA</a>
+        |
+        <a href="about.html" style="color: rgb(255, 255, 255);">O STRANICI</a>
+        |
+        <a href="contact.html" style="color: rgb(255, 255, 255);">KONTAKTIRANJE</a>
+        <hr>
+    </h3>
+
     <h2>Kontaktiranje</h2>
     <form>
         <fieldset>
@@ -48,10 +55,12 @@
             <legend>Utisci o sajtu</legend>
             <p>
                 Koliko vam se svideo sadržaj ovog vebsajta?
-                <select name="strucna_sprema">
+                <select name="sadrzaj">
+                    <option selected>Svideo mi se jako</option>
+                    <option>Svideo mi se</option>
+                    <option>Malo mi se svideo</option>
                     <option>Nije mi se svideo</option>
-                    <option>Nesiguran</option>
-                    <option selected>Svideo mi se</option>
+                    <option>Baš mi se nije svideo</option>
                 </select>
             </p>
             <p>
@@ -62,12 +71,25 @@
                 Koliko puta ste posetili ovaj sajt (približno)?
                 <input type="number">
             </p>
+            <p>
+                Koje od navedenih igara su vam se svidele? <br><br>
+                <input type="checkbox"> Brawlhalla <br>
+                <input type="checkbox"> Call Of Duty: Warzone <br>
+                <input type="checkbox"> Grand Theft Auto 5 <br>
+                <input type="checkbox"> League Of Legends <br>
+                <input type="checkbox"> Halo 3 <br>
+            </p>
+            <p>
+                Koliko vam se svidela pesma <b>Legends never die</b>?
+                <br>
+                <input type="range" name="pesma" id="LND" min="0" max="10">
+            </p>
         </fieldset>
         <br>
         <fieldset>
             <legend>Kontakt forma</legend>
             <p>
-                The purpose of contacting: <br><br>
+                Svrha kontaktiranja: <br><br>
                 <input type="checkbox"> Želim da prijavim problem <br>
                 <input type="checkbox"> Želim da napišem sugestiju <br>
             </p>
@@ -78,8 +100,11 @@
         <br><br>
         <input type="submit" value="Pošalji">
     </form>
+
+    <hr>
+
     <p>
-        <a href="#vrh"><img src="Images/UpArrow.png" width="7%"></a>
+        <a href="#vrh"><img src="Images/UpArrow.png" width="7%" style="margin-left: 50%; margin-right: 50%"></a>
     </p>
 </body>
 
