--- a/igre.html
+++ b/igre.html
@@ -5,7 +5,12 @@
 <head>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+        * {
+            font-family: 'Roboto', sans-serif;
+        }
     </style>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>IGRE</title>
@@ -14,47 +19,62 @@
 
 <body>
     <h2 id="vrh"></h2>
-    <div class="navbar" style="background-color: rgb(32, 28, 114);">
-        <h3 style="font-family: 'Roboto', sans-serif; text-align:center">
-            <br>
-            <a href="index.html" style="color: rgb(255, 255, 255);">POČETNA</a>
-            |
-            <a href="igre.html" style="color: rgb(255, 255, 255);">IGRE</a>
-            |
-            <a href="about.html" style="color: rgb(255, 255, 255);">O STRANICI</a>
-            |
-            <a href="contact.html" style="color: rgb(255, 255, 255);">KONTAKTIRANJE</a>
-            <hr>
-        </h3>
-    </div>
+
+    <h3 style="font-family: 'Roboto', sans-serif; text-align:center; background-color: rgb(0, 35, 102);">
+        <br>
+        <a href="index.html" style="color: rgb(255, 255, 255);">POČETNA</a>
+        |
+        <a href="igre.html" style="color: rgb(255, 255, 255);">IGRE</a>
+        |
+        <a href="muzikaIgara.html" style="color: rgb(255, 255, 255);">MUZIKA IGARA</a>
+        |
+        <a href="about.html" style="color: rgb(255, 255, 255);">O STRANICI</a>
+        |
+        <a href="contact.html" style="color: rgb(255, 255, 255);">KONTAKTIRANJE</a>
+        <hr>
+    </h3>
+
     <h2>Igre</h2>
-    <div class="navbar">
-        <h5 style="font-family: 'Roboto', sans-serif; text-align:center">
-            <br>
-            <a href="Images/brawlhalla.jpg" target="_blank" style="color: rgb(255, 255, 255);"><img
-                    src="Images/brawlhalla.jpg" alt="Brawlhalla" width="300"></a>
-            <br>
-            <hr>
-            <a href="Images/CallOfDutyWarzone.jpg" target="_window" style="color: rgb(255, 255, 255);"><img
-                    src="Images/CallOfDutyWarzone.jpg" alt="Call Of Duty: Warzone" width="300"></a>
-            <br>
-            <hr>
-            <a href="Images/GrandTheftAuto5.jpg" target="_blank" style="color: rgb(255, 255, 255);"><img
-                    src="Images/GrandTheftAuto5.jpg" alt="Grand Theft Auto 5" width="300"></a>
-            <br>
-            <hr>
-            <a href="Images/LeagueOfLegends.jpg" target="_blank" style="color: rgb(255, 255, 255);"><img
-                    src="Images/LeagueOfLegends.jpg" alt="League Of Legends" width="300"></a>
-            <br>
-            <hr>
-            <a href="Images/Halo3.jpg" target="_blank" style="color: rgb(255, 255, 255);"><img src="Images/Halo3.jpg"
-                    alt="Halo 3
-            " width="300"></a>
-            <hr>
-        </h5>
-    </div>
+    <h4 style="text-align:center">
+        <br>
+        <a href="https://en.wikipedia.org/wiki/Brawlhalla" target="_blank">Brawlhalla</a>
+        <br>
+        <a href="Images/brawlhalla.jpg" target="_blank"><img src="Images/brawlhalla.jpg" alt="Brawlhalla"
+                width="40%"></a>
+        <br>
+        <hr>
+        <br>
+        <a href="https://sr.wikipedia.org/wiki/Call_of_Duty:_Warzone" target="_blank">Call Of Duty: Warzone</a>
+        <br>
+        <a href="Images/CallOfDutyWarzone.jpg" target="_window"><img src="Images/CallOfDutyWarzone.jpg"
+                alt="Call Of Duty: Warzone" width="40%"></a>
+        <br>
+        <hr>
+        <br>
+        <a href="https://sr.wikipedia.org/wiki/Grand_Theft_Auto_V" target="_blank">Grand Theft Auto 5</a>
+        <br>
+        <a href="Images/GrandTheftAuto5.jpg" target="_blank"><img src="Images/GrandTheftAuto5.jpg"
+                alt="Grand Theft Auto 5" width="40%"></a>
+        <br>
+        <hr>
+        <br>
+        <a href="https://sr.wikipedia.org/wiki/League_of_Legends" target="_blank">League Of Legends</a>
+        <br>
+        <a href="Images/LeagueOfLegends.jpg" target="_blank"><img src="Images/LeagueOfLegends.jpg"
+                alt="League Of Legends" width="40%"></a>
+        <br>
+        <hr>
+        <br>
+        <a href="https://en.wikipedia.org/wiki/Halo_3" target="_blank">Halo 3</a>
+        <br>
+        <a href="Images/Halo3.jpg" target="_blank"><img src="Images/Halo3.jpg" alt="Halo 3
+            " width="40%"></a>
+    </h4>
+
+    <hr>
+
     <p>
-        <a href="#vrh"><img src="Images/UpArrow.png" width="7%"></a>
+        <a href="#vrh"><img src="Images/UpArrow.png" width="7%" style="margin-left: 50%; margin-right: 50%"></a>
     </p>
 </body>
 
