--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+        * {
+            font-family: 'Roboto', sans-serif;
+        }
     </style>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>5 najboljih video igara do 2020. godine</title>
@@ -12,79 +17,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
+<body bgcolor="dodgerblue">
     <h2 id="vrh"></h2>
-    <div class="header">
-        <h1 style="font-family: 'Roboto', sans-serif; text-align:center"><strong>TOP 5 najboljih video igara do 2020.
-                godine</strong></h1>
-        <p style="font-family: 'Roboto', sans-serif; text-align:center">&copy; <b><u>Luka Momčilović</u></b> 2021. -
-            <i>sva prava zadržana</i></p>
-        <hr>
-    </div>
-    <div class="navbar">
-        <h3 style="font-family: 'Roboto', sans-serif; text-align:center">
-            <a href="index.html">POČETNA</a>
-            |
-            <a href="igre.html">IGRE</a>
-            |
-            <a href="about.html">O STRANICI</a>
-            |
-            <a href="contact.html">KONTAKTIRANJE</a>
-            <hr>
-        </h3>
-    </div>
 
-    <div>
-        <h4>Tabela:</h4>
-        <table border="1" style="margin-left: auto; margin-right:auto">
-            <tr>
-                <th colspan="2" rowspan="2"><em><mark> Tabela popularnosti igara</mark></em></th>
-                <th colspan="4">Procenat aktivnih igrača (2020. godina):</th>
-            </tr>
-            <tr>
-                <th>Q1</th>
-                <th>Q2</th>
-                <th>Q3</th>
-                <th>Q4</th>
-            </tr>
-            <tr>
-                <th rowspan="5">Naziv igre:</th>
-                <th>&lt;Brawlhalla&gt;</th>
-                <td>24%</td>
-                <td>20%</td>
-                <td>23%</td>
-                <td>26%</td>
-            </tr>
-            <tr>
-                <th>&lt;Call Of Duty: Warzone&gt;</th>
-                <td>15%</td>
-                <td>17%</td>
-                <td>23%</td>
-                <td>21%</td>
-            </tr>
-            <tr>
-                <th>&lt;Grand Theft Auto 5&gt;</th>
-                <td>29%</td>
-                <td>35%</td>
-                <td>31%</td>
-                <td>32%</td>
-            </tr>
-            <tr>
-                <th>&lt;League Of Legends&gt;</th>
-                <td>60%</td>
-                <td>55%</td>
-                <td>57%</td>
-                <td>59%</td>
-            </tr>
-            <tr>
-                <th>&lt;Halo 3&gt;</th>
-                <td>72%</td>
-                <td>73%</td>
-                <td>73%</td>
-                <td>74%</td>
-            </tr>
-        </table>
-    </div>
+    <h1 style="text-align:center"><strong>TOP 5 najboljih video igara do 2020.
+            godine</strong>
+    </h1>
+
+    <p style="text-align:center">&copy; <b><u>Luka Momčilović</u></b> 2021. -
+        <i>sva prava zadržana</i>
+    </p>
+
+    <hr>
+
+    <h3 style="text-align:center; background-color: rgb(0, 35, 102);">
+        <br>
+        <a href="index.html" style="color: rgb(255, 255, 255);">POČETNA</a>
+        |
+        <a href="igre.html" style="color: rgb(255, 255, 255);">IGRE</a>
+        |
+        <a href="muzikaIgara.html" style="color: rgb(255, 255, 255);">MUZIKA IGARA</a>
+        |
+        <a href="about.html" style="color: rgb(255, 255, 255);">O STRANICI</a>
+        |
+        <a href="contact.html" style="color: rgb(255, 255, 255);">KONTAKTIRANJE</a>
+        <hr>
+    </h3>
+
+    <h4>Tabela:</h4>
+    <table border="1"
+        style="margin-left: auto; margin-right:auto; border: 5px  black; border-collapse: collapse; padding: 15px; border-spacing: 5px; text-align:center">
+        <caption>Popularnost igara:</caption>
+        <tr>
+            <th colspan="2" rowspan="2"><em><mark> Tabela popularnosti igara</mark></em></th>
+            <th colspan="4">Procenat aktivnih igrača (2020. godina):</th>
+        </tr>
+        <tr>
+            <th>Q1</th>
+            <th>Q2</th>
+            <th>Q3</th>
+            <th>Q4</th>
+        </tr>
+        <tr>
+            <th rowspan="5">Naziv igre:</th>
+            <th>&lt;Brawlhalla&gt;</th>
+            <td>24%</td>
+            <td>20%</td>
+            <td>23%</td>
+            <td>26%</td>
+        </tr>
+        <tr>
+            <th>&lt;Call Of Duty: Warzone&gt;</th>
+            <td>15%</td>
+            <td>17%</td>
+            <td>23%</td>
+            <td>21%</td>
+        </tr>
+        <tr>
+            <th>&lt;Grand Theft Auto 5&gt;</th>
+            <td>29%</td>
+            <td>35%</td>
+            <td>31%</td>
+            <td>32%</td>
+        </tr>
+        <tr>
+            <th>&lt;League Of Legends&gt;</th>
+            <td>60%</td>
+            <td>55%</td>
+            <td>57%</td>
+            <td>59%</td>
+        </tr>
+        <tr>
+            <th>&lt;Halo 3&gt;</th>
+            <td>72%</td>
+            <td>73%</td>
+            <td>73%</td>
+            <td>74%</td>
+        </tr>
+    </table>
+
     <hr>
 
     <h4>Lista:</h4>
@@ -132,6 +143,7 @@
         </li>
     </ul>
     <hr>
+
     <h4>
         Sajtovi individualnih igara:
         <a href="https://www.brawlhalla.com/" target="prvi_iframe">Brawlhalla</a>
@@ -144,13 +156,17 @@
         |
         <a href="https://www.halowaypoint.com/en-us/games/halo-3" target="prvi_iframe">Halo 3</a>
     </h4>
+
     <hr>
+
     <iframe src="https://www.brawlhalla.com/" width="100%" height="500px" name="prvi_iframe"></iframe>
 
     <br>
-    <div>
+    <hr>
+
+    <p>
         <a href="#vrh"><img src="Images/UpArrow.png" width="7%" style="margin-left: 50%; margin-right: 50%"></a>
-    </div>
+    </p>
 
 </body>
 
