--- a/about.html
+++ b/about.html
@@ -36,7 +36,45 @@
 
     <h2>O Stranici</h2>
     <p>
-        Ovo je stranica sa listom top 5 najboljih igrica do 2020. godine po mom mišljenju.
+        Ovo je stranica sa listom <strong><em>top 5 najboljih igrica do 2020. godine</em></strong> po mom mišljenju. Na
+        listi se nalaze igre <em>Brawlhalla, Call Of Duty: Warzone, Grand Theft Auto 5, League of Legends, Halo 3</em>.
+        Na
+        listi je prvo trebao da se nađe <del>Halo 5: Guardians</del>, ali sam se predomislio u korist igre Halo 3 zato
+        što je za to vreme bila mnogo bolje urađena.
+    </p>
+
+    <p>
+        Na početnoj strani je prikazana prvo tabela u kojoj se nalaze procenat aktivnih igrača u svakom kvartalu. Ispod
+        tabele se nalazi prikaz istih podataka u obliku liste zarad drugačije preglednosti. Na dnu stranice se nalazi
+        forma gde se mogu videti sajtovi individualnih igara.
+    </p>
+
+    <p>
+        Pored početne stranice, tu su i druge stranice:
+        <br>
+        <dl>
+            <dt><b>Igre</b></dt>
+            <dd>
+                - nalaze se linkovi ka vikipediji za te igrice, kao i slika &lt;baner&gt; igre koja, kada se na
+                nju klikne vodi ka slici u punoj rezoluciji.
+            </dd>
+
+            <dt><b>Muzika igara</b></dt>
+            <dd>
+                - integrisan je frejm sa spotifaja, gde se može pustiti pesma ili plejlista.
+            </dd>
+
+            <dt><b>Kontaktiranje</b></dt>
+            <dd>
+                - forma koja se može popuniti i proslediti povratne informacije korisnika sajta
+            </dd>
+
+        </dl>
+    </p>
+
+    <p>
+        Sa dna svake stranice se lako može doći na vrh iste stranice klikom na duplu strelicu koja se nalazi na kraju
+        svake stranice.
     </p>
 
     <hr>
