--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     <h2>Kontaktiranje</h2>
     <form>
         <fieldset>
-            <legend>Lične informacije</legend>
+            <legend>Lične informacije <sub>1</sub> </legend>
             Ime:
             <input type="text">
             <br>
@@ -52,7 +52,7 @@
         </fieldset>
         <br>
         <fieldset>
-            <legend>Utisci o sajtu</legend>
+            <legend>Utisci o sajtu <sub>2</sub> </legend>
             <p>
                 Koliko vam se svideo sadržaj ovog vebsajta?
                 <select name="sadrzaj">
@@ -68,7 +68,7 @@
                 <input type="color" name="color" value="#0000ff">
             </p>
             <p>
-                Koliko puta ste posetili ovaj sajt (približno)?
+                Koliko puta ste posetili ovaj sajt <sub>(približno)</sub> ?
                 <input type="number">
             </p>
             <p>
@@ -80,14 +80,16 @@
                 <input type="checkbox"> Halo 3 <br>
             </p>
             <p>
-                Koliko vam se svidela pesma <b>Legends never die</b>?
+                Koliko vam se svidela pesma
+                <a href="muzikaIgara.html"><b>Legends never die</b></a>
+                ?
                 <br>
                 <input type="range" name="pesma" id="LND" min="0" max="10">
             </p>
         </fieldset>
         <br>
         <fieldset>
-            <legend>Kontakt forma</legend>
+            <legend>Kontakt forma <sub>3</sub></legend>
             <p>
                 Svrha kontaktiranja: <br><br>
                 <input type="checkbox"> Želim da prijavim problem <br>
