--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body bgcolor="dodgerblue">
+<body>
     <h2 id="vrh"></h2>
 
     <h1 style="text-align:center"><strong>TOP 5 najboljih video igara do 2020.
             godine</strong>
     </h1>
 
-    <p style="text-align:center">&copy; <b><u>Luka Momčilović</u></b> 2021. -
-        <i>sva prava zadržana</i>
+    <p style="text-align:center"> <b>Luka Momčilović</b><sup>&copy;</sup> 2021. -
+        <ins>sva prava zadržana</ins>
     </p>
 
     <hr>
