Dodat i uređen CSS (jako malo)
Just made some changes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="rs">
 
 <head>
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
@@ -14,148 +15,161 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>5 najboljih video igara do 2020. godine</title>
     <meta name="description" content="Veb sajt rađen u HTML-u za prvi zadatak iz predmeta SP2-WD">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <h2 id="vrh"></h2>
 
-    <h1 style="text-align:center"><strong>TOP 5 najboljih video igara do 2020.
-            godine</strong>
-    </h1>
+    <div class="header">
+        <h1 style="text-align:center"><strong>TOP 5 najboljih video igara do 2020.
+                godine</strong>
+        </h1>
 
-    <p style="text-align:center"> <b>Luka Momčilović</b><sup>&copy;</sup> 2021. -
-        <ins>sva prava zadržana</ins>
-    </p>
+        <p style="text-align:center"> <b>Luka Momčilović</b><sup>&copy;</sup> 2021. -
+            <ins>sva prava zadržana</ins>
+        </p>
+    </div>
+
 
     <hr>
 
-    <h3 style="text-align:center; background-color: rgb(0, 35, 102);">
-        <br>
-        <a href="index.html" style="color: rgb(255, 255, 255);">POČETNA</a>
-        |
-        <a href="igre.html" style="color: rgb(255, 255, 255);">IGRE</a>
-        |
-        <a href="muzikaIgara.html" style="color: rgb(255, 255, 255);">MUZIKA IGARA</a>
-        |
-        <a href="about.html" style="color: rgb(255, 255, 255);">O STRANICI</a>
-        |
-        <a href="contact.html" style="color: rgb(255, 255, 255);">KONTAKTIRANJE</a>
-        <hr>
-    </h3>
+    <div class="navigacija">
+        <h3 style="text-align:center;">
+            <a href="index.html" style="color: rgb(255, 255, 255);">POČETNA</a>
+            |
+            <a href="igre.html" style="color: rgb(255, 255, 255);">IGRE</a>
+            |
+            <a href="muzikaIgara.html" style="color: rgb(255, 255, 255);">MUZIKA IGARA</a>
+            |
+            <a href="about.html" style="color: rgb(255, 255, 255);">O STRANICI</a>
+            |
+            <a href="contact.html" style="color: rgb(255, 255, 255);">KONTAKTIRANJE</a>
+        </h3>
+    </div>
+
 
     <h4>Tabela:</h4>
-    <table border="1"
-        style="margin-left: auto; margin-right:auto; border: 5px  black; border-collapse: collapse; padding: 15px; border-spacing: 5px; text-align:center">
-        <caption>Popularnost igara:</caption>
-        <tr>
-            <th colspan="2" rowspan="2"><em><mark> Tabela popularnosti igara</mark></em></th>
-            <th colspan="4">Procenat aktivnih igrača (2020. godina):</th>
-        </tr>
-        <tr>
-            <th>Q1</th>
-            <th>Q2</th>
-            <th>Q3</th>
-            <th>Q4</th>
-        </tr>
-        <tr>
-            <th rowspan="5">Naziv igre:</th>
-            <th>&lt;Brawlhalla&gt;</th>
-            <td>24%</td>
-            <td>20%</td>
-            <td>23%</td>
-            <td>26%</td>
-        </tr>
-        <tr>
-            <th>&lt;Call Of Duty: Warzone&gt;</th>
-            <td>15%</td>
-            <td>17%</td>
-            <td>23%</td>
-            <td>21%</td>
-        </tr>
-        <tr>
-            <th>&lt;Grand Theft Auto 5&gt;</th>
-            <td>29%</td>
-            <td>35%</td>
-            <td>31%</td>
-            <td>32%</td>
-        </tr>
-        <tr>
-            <th>&lt;League Of Legends&gt;</th>
-            <td>60%</td>
-            <td>55%</td>
-            <td>57%</td>
-            <td>59%</td>
-        </tr>
-        <tr>
-            <th>&lt;Halo 3&gt;</th>
-            <td>72%</td>
-            <td>73%</td>
-            <td>73%</td>
-            <td>74%</td>
-        </tr>
-    </table>
+    <div>
+        <table border="1"
+            style="margin-left: auto; margin-right:auto; border: 5px  black; border-collapse: collapse; padding: 15px; border-spacing: 5px; text-align:center">
+            <caption>Popularnost igara:</caption>
+            <tr>
+                <th colspan="2" rowspan="2"><em><mark> Tabela popularnosti igara</mark></em></th>
+                <th colspan="4">Procenat aktivnih igrača (2020. godina):</th>
+            </tr>
+            <tr>
+                <th>Q1</th>
+                <th>Q2</th>
+                <th>Q3</th>
+                <th>Q4</th>
+            </tr>
+            <tr>
+                <th rowspan="5">Naziv igre:</th>
+                <th>&lt;Brawlhalla&gt;</th>
+                <td>24%</td>
+                <td>20%</td>
+                <td>23%</td>
+                <td>26%</td>
+            </tr>
+            <tr>
+                <th>&lt;Call Of Duty: Warzone&gt;</th>
+                <td>15%</td>
+                <td>17%</td>
+                <td>23%</td>
+                <td>21%</td>
+            </tr>
+            <tr>
+                <th>&lt;Grand Theft Auto 5&gt;</th>
+                <td>29%</td>
+                <td>35%</td>
+                <td>31%</td>
+                <td>32%</td>
+            </tr>
+            <tr>
+                <th>&lt;League Of Legends&gt;</th>
+                <td>60%</td>
+                <td>55%</td>
+                <td>57%</td>
+                <td>59%</td>
+            </tr>
+            <tr>
+                <th>&lt;Halo 3&gt;</th>
+                <td>72%</td>
+                <td>73%</td>
+                <td>73%</td>
+                <td>74%</td>
+            </tr>
+        </table>
+    </div>
+
 
     <hr>
 
     <h4>Lista:</h4>
-    <ul>
-        <li>
-            Q1
-            <ol type="1">
-                <li>Halo 3</li>
-                <li>League Of Legends</li>
-                <li>Grand Theft Auto 5</li>
-                <li>Brawlhalla</li>
-                <li>Call Of Duty: Warzone</li>
-            </ol>
-        </li>
-        <li>Q2
-            <ol type="1">
-                <li>Halo 3</li>
-                <li>League Of Legends</li>
-                <li>Grand Theft Auto 5</li>
-                <li>Brawlhalla</li>
-                <li>Call Of Duty: Warzone</li>
-            </ol>
-        </li>
-        <li>Q3
-            <ol type="1">
-                <li>Halo 3</li>
-                <li>League Of Legends</li>
-                <li>Grand Theft Auto 5</li>
-                <li>
-                    <ol type="a">
-                        <li>Call Of Duty: Warzone</li>
-                        <li>Brawlhalla</li>
-                    </ol>
-                </li>
-            </ol>
-        </li>
-        <li>Q4
-            <ol type="1">
-                <li>Halo 3</li>
-                <li>League Of Legends</li>
-                <li>Grand Theft Auto 5</li>
-                <li>Brawlhalla</li>
-                <li>Call Of Duty: Warzone</li>
-            </ol>
-        </li>
-    </ul>
+    <div>
+        <ul>
+            <li>
+                Q1
+                <ol type="1">
+                    <li>Halo 3</li>
+                    <li>League Of Legends</li>
+                    <li>Grand Theft Auto 5</li>
+                    <li>Brawlhalla</li>
+                    <li>Call Of Duty: Warzone</li>
+                </ol>
+            </li>
+            <li>Q2
+                <ol type="1">
+                    <li>Halo 3</li>
+                    <li>League Of Legends</li>
+                    <li>Grand Theft Auto 5</li>
+                    <li>Brawlhalla</li>
+                    <li>Call Of Duty: Warzone</li>
+                </ol>
+            </li>
+            <li>Q3
+                <ol type="1">
+                    <li>Halo 3</li>
+                    <li>League Of Legends</li>
+                    <li>Grand Theft Auto 5</li>
+                    <li>
+                        <ol type="a">
+                            <li>Call Of Duty: Warzone</li>
+                            <li>Brawlhalla</li>
+                        </ol>
+                    </li>
+                </ol>
+            </li>
+            <li>Q4
+                <ol type="1">
+                    <li>Halo 3</li>
+                    <li>League Of Legends</li>
+                    <li>Grand Theft Auto 5</li>
+                    <li>Brawlhalla</li>
+                    <li>Call Of Duty: Warzone</li>
+                </ol>
+            </li>
+        </ul>
+    </div>
+
     <hr>
 
-    <h4>
-        Sajtovi individualnih igara:
-        <a href="https://www.brawlhalla.com/" target="prvi_iframe">Brawlhalla</a>
-        |
-        <a href="https://www.callofduty.com/warzone" target="prvi_iframe">Call Of Duty: Warzone</a>
-        |
-        <a href="https://www.rockstargames.com/V/" target="prvi_iframe">Grand Theft Auto 5</a>
-        |
-        <a href="https://eune.leagueoflegends.com/" target="prvi_iframe">League Of Legends</a>
-        |
-        <a href="https://www.halowaypoint.com/en-us/games/halo-3" target="prvi_iframe">Halo 3</a>
-    </h4>
+    <div>
+        <h4>
+            Sajtovi individualnih igara:
+            <a href="https://www.brawlhalla.com/" target="prvi_iframe">Brawlhalla</a>
+            |
+            <a href="https://www.callofduty.com/warzone" target="prvi_iframe">Call Of Duty: Warzone</a>
+            |
+            <a href="https://www.rockstargames.com/V/" target="prvi_iframe">Grand Theft Auto 5</a>
+            |
+            <a href="https://eune.leagueoflegends.com/" target="prvi_iframe">League Of Legends</a>
+            |
+            <a href="https://www.halowaypoint.com/en-us/games/halo-3" target="prvi_iframe">Halo 3</a>
+        </h4>
+    </div>
+
 
     <hr>
 
@@ -164,9 +178,12 @@
     <br>
     <hr>
 
-    <p>
-        <a href="#vrh"><img src="Images/UpArrow.png" width="7%" style="margin-left: 50%; margin-right: 50%"></a>
-    </p>
+    <div>
+        <p>
+            <a href="#vrh"><img src="Images/UpArrow.png" width="7%" style="margin-left: 50%; margin-right: 50%"></a>
+        </p>
+    </div>
+
 
 </body>
 
