--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
